RNN stuff added

--- a/tensorflow MNIST.ipynb
+++ b/tensorflow MNIST.ipynb
@@ -101,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y = tf.nn.softmax(tf.matmul(x, W) + b)\n",
@@ -238,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "92.0099973679\n"
+      "91.6599988937\n"
      ]
     }
    ],
@@ -253,6 +255,197 @@
     "correct_prediction = tf.equal(tf.argmax(y,1), tf.argmax(y_,1))\n",
     "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
     "print(sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels}) * 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# RNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "learning_rate = 0.001\n",
+    "training_iters = 100000\n",
+    "batch_size = 128\n",
+    "display_step = 10\n",
+    "\n",
+    "# Network Parameters\n",
+    "n_input = 28 # MNIST data input (img shape: 28*28)\n",
+    "n_steps = 28 # timesteps\n",
+    "n_hidden = 128 # hidden layer num of features\n",
+    "n_classes = 10 # MNIST total classes (0-9 digits)\n",
+    "\n",
+    "from tensorflow.contrib import rnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# tf Graph input\n",
+    "x = tf.placeholder(\"float\", [None, n_steps, n_input])\n",
+    "y = tf.placeholder(\"float\", [None, n_classes])\n",
+    "\n",
+    "# Define weights\n",
+    "weights = {\n",
+    "    'out': tf.Variable(tf.random_normal([n_hidden, n_classes]))\n",
+    "}\n",
+    "biases = {\n",
+    "    'out': tf.Variable(tf.random_normal([n_classes]))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def RNN(x, weights, biases):\n",
+    "\n",
+    "    # Prepare data shape to match `rnn` function requirements\n",
+    "    # Current data input shape: (batch_size, n_steps, n_input)\n",
+    "    # Required shape: 'n_steps' tensors list of shape (batch_size, n_input)\n",
+    "\n",
+    "    # Unstack to get a list of 'n_steps' tensors of shape (batch_size, n_input)\n",
+    "    x = tf.unstack(x, n_steps, 1)\n",
+    "\n",
+    "    # Define a lstm cell with tensorflow\n",
+    "    lstm_cell = rnn.BasicLSTMCell(n_hidden, forget_bias=1.0)\n",
+    "\n",
+    "    # Get lstm cell output\n",
+    "    outputs, states = rnn.static_rnn(lstm_cell, x, dtype=tf.float32)\n",
+    "\n",
+    "    # Linear activation, using rnn inner loop last output\n",
+    "    return tf.matmul(outputs[-1], weights['out']) + biases['out']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = RNN(x, weights, biases)\n",
+    "\n",
+    "# Define loss and optimizer\n",
+    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=pred, labels=y))\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost)\n",
+    "\n",
+    "# Evaluate model\n",
+    "correct_pred = tf.equal(tf.argmax(pred,1), tf.argmax(y,1))\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter 1280, Minibatch Loss= 1.773882, Training Accuracy= 0.37500\n",
+      "Iter 2560, Minibatch Loss= 1.559953, Training Accuracy= 0.42969\n",
+      "Iter 3840, Minibatch Loss= 1.319415, Training Accuracy= 0.53906\n",
+      "Iter 5120, Minibatch Loss= 1.195445, Training Accuracy= 0.63281\n",
+      "Iter 6400, Minibatch Loss= 0.874727, Training Accuracy= 0.73438\n",
+      "Iter 7680, Minibatch Loss= 0.722427, Training Accuracy= 0.81250\n",
+      "Iter 8960, Minibatch Loss= 0.728213, Training Accuracy= 0.72656\n",
+      "Iter 10240, Minibatch Loss= 0.608272, Training Accuracy= 0.79688\n",
+      "Iter 11520, Minibatch Loss= 0.561070, Training Accuracy= 0.84375\n",
+      "Iter 12800, Minibatch Loss= 0.507053, Training Accuracy= 0.84375\n",
+      "Iter 14080, Minibatch Loss= 0.351191, Training Accuracy= 0.87500\n",
+      "Iter 15360, Minibatch Loss= 0.393101, Training Accuracy= 0.86719\n",
+      "Iter 16640, Minibatch Loss= 0.327488, Training Accuracy= 0.89844\n",
+      "Iter 17920, Minibatch Loss= 0.379033, Training Accuracy= 0.85938\n",
+      "Iter 19200, Minibatch Loss= 0.391406, Training Accuracy= 0.85156\n",
+      "Iter 20480, Minibatch Loss= 0.325107, Training Accuracy= 0.87500\n",
+      "Iter 21760, Minibatch Loss= 0.242753, Training Accuracy= 0.92188\n",
+      "Iter 23040, Minibatch Loss= 0.361992, Training Accuracy= 0.87500\n",
+      "Iter 24320, Minibatch Loss= 0.301501, Training Accuracy= 0.93750\n",
+      "Iter 25600, Minibatch Loss= 0.180361, Training Accuracy= 0.92969\n",
+      "Iter 26880, Minibatch Loss= 0.255460, Training Accuracy= 0.89062\n",
+      "Iter 28160, Minibatch Loss= 0.294607, Training Accuracy= 0.91406\n",
+      "Iter 29440, Minibatch Loss= 0.180645, Training Accuracy= 0.96094\n",
+      "Iter 30720, Minibatch Loss= 0.233651, Training Accuracy= 0.91406\n",
+      "Iter 32000, Minibatch Loss= 0.161429, Training Accuracy= 0.94531\n",
+      "Iter 33280, Minibatch Loss= 0.200685, Training Accuracy= 0.91406\n",
+      "Iter 34560, Minibatch Loss= 0.257737, Training Accuracy= 0.91406\n",
+      "Iter 35840, Minibatch Loss= 0.200410, Training Accuracy= 0.95312\n",
+      "Iter 37120, Minibatch Loss= 0.147461, Training Accuracy= 0.96094\n",
+      "Iter 38400, Minibatch Loss= 0.165422, Training Accuracy= 0.95312\n",
+      "Iter 39680, Minibatch Loss= 0.283314, Training Accuracy= 0.89062\n",
+      "Iter 40960, Minibatch Loss= 0.245066, Training Accuracy= 0.91406\n",
+      "Iter 42240, Minibatch Loss= 0.098958, Training Accuracy= 0.96094\n",
+      "Iter 43520, Minibatch Loss= 0.081543, Training Accuracy= 0.98438\n",
+      "Iter 44800, Minibatch Loss= 0.186742, Training Accuracy= 0.92188\n",
+      "Iter 46080, Minibatch Loss= 0.140245, Training Accuracy= 0.94531\n",
+      "Iter 47360, Minibatch Loss= 0.145392, Training Accuracy= 0.96875\n",
+      "Iter 48640, Minibatch Loss= 0.101886, Training Accuracy= 0.96875\n",
+      "Iter 49920, Minibatch Loss= 0.218730, Training Accuracy= 0.92969\n",
+      "Iter 51200, Minibatch Loss= 0.231230, Training Accuracy= 0.92188\n",
+      "Iter 52480, Minibatch Loss= 0.090655, Training Accuracy= 0.96875\n",
+      "Iter 53760, Minibatch Loss= 0.189117, Training Accuracy= 0.94531\n",
+      "Iter 55040, Minibatch Loss= 0.182623, Training Accuracy= 0.94531\n",
+      "Iter 56320, Minibatch Loss= 0.151940, Training Accuracy= 0.94531\n",
+      "Iter 57600, Minibatch Loss= 0.104076, Training Accuracy= 0.97656\n",
+      "Iter 58880, Minibatch Loss= 0.092799, Training Accuracy= 0.97656\n",
+      "Iter 60160, Minibatch Loss= 0.169151, Training Accuracy= 0.95312\n",
+      "Iter 61440, Minibatch Loss= 0.184480, Training Accuracy= 0.95312\n",
+      "Iter 62720, Minibatch Loss= 0.121465, Training Accuracy= 0.96875\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initializing the variables\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "# Launch the graph\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    step = 1\n",
+    "    # Keep training until reach max iterations\n",
+    "    while step * batch_size < training_iters:\n",
+    "        batch_x, batch_y = mnist.train.next_batch(batch_size)\n",
+    "        # Reshape data to get 28 seq of 28 elements\n",
+    "        batch_x = batch_x.reshape((batch_size, n_steps, n_input))\n",
+    "        # Run optimization op (backprop)\n",
+    "        sess.run(optimizer, feed_dict={x: batch_x, y: batch_y})\n",
+    "        if step % display_step == 0:\n",
+    "            # Calculate batch accuracy\n",
+    "            acc = sess.run(accuracy, feed_dict={x: batch_x, y: batch_y})\n",
+    "            # Calculate batch loss\n",
+    "            loss = sess.run(cost, feed_dict={x: batch_x, y: batch_y})\n",
+    "            print(\"Iter \" + str(step*batch_size) + \", Minibatch Loss= \" + \\\n",
+    "                  \"{:.6f}\".format(loss) + \", Training Accuracy= \" + \\\n",
+    "                  \"{:.5f}\".format(acc))\n",
+    "        step += 1\n",
+    "    print(\"Optimization Finished!\")\n",
+    "\n",
+    "    # Calculate accuracy for mnist test images\n",
+    "    test_data = mnist.test.images.reshape((-1, n_steps, n_input))\n",
+    "    test_label = mnist.test.labels\n",
+    "    print(\"Testing Accuracy:\", \\\n",
+    "        sess.run(accuracy, feed_dict={x: test_data, y: test_label}))"
    ]
   },
   {
@@ -281,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
