Test results for RNN

--- a/tensorflow MNIST.ipynb
+++ b/tensorflow MNIST.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,38 @@
       "Iter 58880, Minibatch Loss= 0.092799, Training Accuracy= 0.97656\n",
       "Iter 60160, Minibatch Loss= 0.169151, Training Accuracy= 0.95312\n",
       "Iter 61440, Minibatch Loss= 0.184480, Training Accuracy= 0.95312\n",
-      "Iter 62720, Minibatch Loss= 0.121465, Training Accuracy= 0.96875\n"
+      "Iter 62720, Minibatch Loss= 0.121465, Training Accuracy= 0.96875\n",
+      "Iter 64000, Minibatch Loss= 0.077108, Training Accuracy= 0.97656\n",
+      "Iter 65280, Minibatch Loss= 0.203184, Training Accuracy= 0.92969\n",
+      "Iter 66560, Minibatch Loss= 0.071922, Training Accuracy= 0.98438\n",
+      "Iter 67840, Minibatch Loss= 0.157441, Training Accuracy= 0.95312\n",
+      "Iter 69120, Minibatch Loss= 0.142083, Training Accuracy= 0.93750\n",
+      "Iter 70400, Minibatch Loss= 0.124677, Training Accuracy= 0.96875\n",
+      "Iter 71680, Minibatch Loss= 0.157048, Training Accuracy= 0.93750\n",
+      "Iter 72960, Minibatch Loss= 0.086408, Training Accuracy= 0.98438\n",
+      "Iter 74240, Minibatch Loss= 0.065559, Training Accuracy= 0.97656\n",
+      "Iter 75520, Minibatch Loss= 0.079354, Training Accuracy= 0.96875\n",
+      "Iter 76800, Minibatch Loss= 0.053494, Training Accuracy= 0.98438\n",
+      "Iter 78080, Minibatch Loss= 0.161186, Training Accuracy= 0.96875\n",
+      "Iter 79360, Minibatch Loss= 0.052502, Training Accuracy= 0.99219\n",
+      "Iter 80640, Minibatch Loss= 0.093470, Training Accuracy= 0.98438\n",
+      "Iter 81920, Minibatch Loss= 0.095321, Training Accuracy= 0.97656\n",
+      "Iter 83200, Minibatch Loss= 0.134543, Training Accuracy= 0.95312\n",
+      "Iter 84480, Minibatch Loss= 0.176055, Training Accuracy= 0.95312\n",
+      "Iter 85760, Minibatch Loss= 0.130976, Training Accuracy= 0.94531\n",
+      "Iter 87040, Minibatch Loss= 0.052653, Training Accuracy= 0.97656\n",
+      "Iter 88320, Minibatch Loss= 0.136785, Training Accuracy= 0.96094\n",
+      "Iter 89600, Minibatch Loss= 0.120321, Training Accuracy= 0.97656\n",
+      "Iter 90880, Minibatch Loss= 0.225373, Training Accuracy= 0.93750\n",
+      "Iter 92160, Minibatch Loss= 0.104321, Training Accuracy= 0.96875\n",
+      "Iter 93440, Minibatch Loss= 0.123414, Training Accuracy= 0.96875\n",
+      "Iter 94720, Minibatch Loss= 0.095155, Training Accuracy= 0.96875\n",
+      "Iter 96000, Minibatch Loss= 0.129691, Training Accuracy= 0.96094\n",
+      "Iter 97280, Minibatch Loss= 0.118601, Training Accuracy= 0.97656\n",
+      "Iter 98560, Minibatch Loss= 0.057123, Training Accuracy= 0.97656\n",
+      "Iter 99840, Minibatch Loss= 0.108942, Training Accuracy= 0.95312\n",
+      "Optimization Finished!\n",
+      "('Testing Accuracy:', 0.97070003)\n"
      ]
     }
    ],
