Removing seq lens param

--- a/tensorflow MNIST.ipynb
+++ b/tensorflow MNIST.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -334,7 +334,7 @@
     "    'out': tf.Variable(tf.random_normal([n_classes]))\n",
     "}\n",
     "\n",
-    "def RNN(x, seq_lens, weights, biases):\n",
+    "def RNN(x, weights, biases):\n",
     "\n",
     "    # Prepare data shape to match `rnn` function requirements\n",
     "    # Current data input shape: (batch_size, n_steps, n_input)\n",
@@ -356,7 +356,7 @@
     "    # Linear activation, using rnn inner loop last output\n",
     "    return tf.matmul(last_output, weights['out']) + biases['out']\n",
     "\n",
-    "pred = RNN(x, seq_lens, weights, biases)\n",
+    "pred = RNN(x, weights, biases)\n",
     "\n",
     "# Define loss and optimizer\n",
     "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=pred, labels=y))\n",
